# nova

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: .scanner.h.swp  .token.h.swp  CMakeLists.txt  analysis.cpp  analysis.h  ast.cpp  ast.h  codegen.cpp  codegen.h  error.cpp  error.h  parser.cpp  parser.h  scanner.cpp  scanner.h  symbol_table.cpp  symbol_table.h  tiny.cpp  token.cpp  token.h  vm.cpp  vm.h
test/: CMakeLists.txt  analysis_test.cpp  codegen_test.cpp  parser_test.cpp  test.tiny  tokenizer_test.cpp  tokenizer_test.txt  vm_test.cpp
